# extension-cookiecutter-ts

./: .gitignore  .travis.yml  LICENSE  README.md  browser_check.py  cookiecutter.json  cookiecutter_with_server.json  copier.yml
.github/workflows/: alignment.yml  check-tests.yml  main.yml
hooks/: post_gen_project.py
template/: .gitignore  .gitignore.jinja  .prettierignore.jinja  RELEASE.md  install.json  package.json.jinja
template/.github/workflows/: build.yml.jinja  check-release.yml  publish-release.yml  {% if test %}update-integration-tests.yml{% endif %}
template/{% if has_binder %}binder{% endif %}/: environment.yml
template/{% if has_settings %}schema{% endif %}/: plugin.json
template/{% if kind == 'server' %}jupyter-config{% endif %}/server-config/: {{python_name}}.json.jinja
template/{% if test %}ui-tests{% endif %}/: package.json.jinja
template/{% if test %}ui-tests{% endif %}/tests/: {{python_name}}.spec.ts.jinja
template/{{python_name}}/: LICENSE  README.md  pyproject.toml  tsconfig.json  {% if kind == 'server' %}handlers.py{% endif %}.jinja  {% if test %}conftest.py{% endif %}
template/{{python_name}}/.github/workflows/: {% if has_binder %}binder-on-pr.yml{% endif %}
template/{{python_name}}/src/: index.ts  {% if kind == 'server' %}handler.ts{% endif %}
template/{{python_name}}/src/{% if test %}__tests__{% endif %}/: {{python_name}}.spec.ts
template/{{python_name}}/style/: index.css  {% if kind = 'theme' %}variables.css{% endif %}
template/{{python_name}}/{% if has_binder %}binder{% endif %}/: postBuild
template/{{python_name}}/{% if kind == 'server' %}jupyter-config{% endif %}/nb-config/: {{python_name}}.json
template/{{python_name}}/{% if test %}tests{% endif %}/: __init__.py
template/{{python_name}}/{{python_name}}/: __init__.py
template/{{python_name}}/{{python_name}}/{% if test %}tests{% endif %}/: test_handlers.py
{{cookiecutter.extension_name}}/: .eslintrc.js  .gitignore  MANIFEST.in  README.md  RELEASE.md  build_extension.js  package.json  setup.py  tsconfig.json
{{cookiecutter.extension_name}}/.github/workflows/: build.yml
{{cookiecutter.extension_name}}/binder/: environment.yml  labextensions.txt  postBuild
{{cookiecutter.extension_name}}/jupyter-config/: {{cookiecutter.extension_name}}.json
{{cookiecutter.extension_name}}/lib/: plugin.js
{{cookiecutter.extension_name}}/scripts/: build_extension.js
{{cookiecutter.extension_name}}/src/: index.ts  plugin.ts  {{cookiecutter.extension_name}}.ts
{{cookiecutter.extension_name}}/{{cookiecutter.extension_name}}/: __init__.py  handlers.py
{{cookiecutter.github_project_name}}/: README.md  build_extension.js  package.json  setup.py
{{cookiecutter.github_project_name}}/lib/: plugin.js
{{cookiecutter.package_name}}/: LICENSE  MANIFEST.in  README.md  package.json  setup.py
{{cookiecutter.package_name}}/.github/workflows/: build.yml
{{cookiecutter.package_name}}/binder/: environment.yml  postBuild
{{cookiecutter.package_name}}/jupyter-config/: {{cookiecutter.package_name}}.json
{{cookiecutter.package_name}}/src/: index.ts  {{cookiecutter.extension_name}}.ts
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py  handlers.py
{{cookiecutter.python_name}}/: .gitignore  .prettierignore  .stylelintrc  .yarnrc.yml  LICENSE  MANIFEST.in  README.md  RELEASE.md  conftest.py  jest.config.js  package.json  playwright.config.js  pyproject.toml  setup.py  tsconfig.json
{{cookiecutter.python_name}}/.github/workflows/: binder-on-pr.yml  build.yml  check-release.yml  integration-tests.yml  prep-release.yml  publish-release.yml  update-integration-tests.yml
{{cookiecutter.python_name}}/binder/: environment.yml  postBuild
{{cookiecutter.python_name}}/jupyter-config/: {{cookiecutter.python_name}}.json
{{cookiecutter.python_name}}/jupyter-config/nb-config/: {{cookiecutter.python_name | replace('-', '_')}}.json  {{cookiecutter.python_name}}.json
{{cookiecutter.python_name}}/jupyter-config/server-config/: {{cookiecutter.python_name | replace('-', '_')}}.json
{{cookiecutter.python_name}}/schema/: plugin.json
{{cookiecutter.python_name}}/src/: handler.ts  index.ts  {{cookiecutter.labextension_name}}.ts
{{cookiecutter.python_name}}/src/__tests__/: {{cookiecutter.python_name}}.spec.ts
{{cookiecutter.python_name}}/style/: index.css  variables.css
{{cookiecutter.python_name}}/ui-tests/: README.md  package.json  playwright.config.js
{{cookiecutter.python_name}}/ui-tests/tests/: {{cookiecutter.python_name}}.spec.ts
{{cookiecutter.python_name}}/{{cookiecutter.python_name | replace('-', '_')}}/: __init__.py  handlers.py
{{cookiecutter.python_name}}/{{cookiecutter.python_name}}/: __init__.py  _version.py  handlers.py
{{cookiecutter.python_name}}/{{cookiecutter.python_name}}/tests/: test_handlers.py
