[build-system]
requires = [
    "hatchling>=1.3.1",
]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.python_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
keywords = [
    "Jupyter",
    "JupyterLab",
    "JupyterLab3",
]
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
{% if cookiecutter.kind.lower() == "server" %}
    jupyter_server>=1.6,<2"
{% endif %}
]

[project.optional-dependencies]
test = [
{% if cookiecutter.test.lower().startswith('y') %}
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-tornasync"
{% endif %}
]

[project.urls]
Homepage = "{{ cookiecutter.repository }}"

[tool.hatch.build]
artifacts = [
    "{{ cookiecutter.python_name }}/labextension",
]

[tool.hatch.build.targets.wheel.shared-data]
{% if cookiecutter.has_settings.lower().startswith('y') %}
"{{ cookiecutter.python_name }}/labextension/schemas/{{ cookiecutter.python_name }}" = "share/jupyter/labextensions/{{ cookiecutter.python_name }}/schemas/{{ cookiecutter.python_name }}"
{% endif %}
"install.json" = "share/jupyter/labextensions/{{ cookiecutter.python_name }}/install.json"
{% if cookiecutter.kind.lower() == "server" %}
"jupyter-config/server-config" = "etc/jupyter/server_config.d"
"jupyter-config/nb-config" = "ect/jupyter/jupyter_notebook_config.d"
{% endif %}
"{{ cookiecutter.python_name }}/labextension/package.json" = "share/jupyter/labextensions/{{ cookiecutter.python_name }}/package.json"
"{{ cookiecutter.python_name }}/labextension/static" = "share/jupyter/labextensions/{{ cookiecutter.python_name }}/static"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = [
    "hatch-jupyter-builder>=0.3.3",
]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
{% if cookiecutter.kind.lower() != "theme" %}
    "{{ cookiecutter.python_name }}/labextension/static/style.js",
{% endif %}
    "{{ cookiecutter.python_name }}/labextension/package.json",
]
skip-if-exists = [
    "{{ cookiecutter.python_name }}/labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = [
    "jlpm",
]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
source_dir = "src"
build_dir = "{{cookiecutter.python_name}}/labextension"

[tool.tbump]
field = [
    { name = "channel", default = "" },
    { name = "release", default = "" },
]
file = [
    { src = "pyproject.toml" },
    { src = "{{ cookiecutter.python_name }}/_version.py" },
    { src = "package.json" },
]

[tool.tbump.version]
current = "0.1.0"
regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "v{new_version}"
