[build-system]
requires = ["hatchling>=1.3.1", "jupyterlab>=4.0.0a29,<5", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.python_name }}"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 3",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = [{% if cookiecutter.kind.lower() == "server" %}
    "jupyter_server>=1.6,<2"{% endif %}
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.optional-dependencies]
test = [{% if cookiecutter.test.lower().startswith('y') %}
    "coverage",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-tornasync"{% endif %}
]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build]
artifacts = ["{{ cookiecutter.python_name }}/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"{{ cookiecutter.python_name }}/labextension" = "share/jupyter/labextensions/{{ cookiecutter.labextension_name }}"
"install.json" = "share/jupyter/labextensions/{{ cookiecutter.labextension_name }}/install.json"{% if cookiecutter.kind.lower() == "server" %}
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
"jupyter-config/nb-config" = "etc/jupyter/jupyter_notebook_config.d"{% endif %}

[tool.hatch.build.targets.sdist]
exclude = [".github", "binder"]

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [{% if cookiecutter.kind.lower() != "theme" %}
    "{{ cookiecutter.python_name }}/labextension/static/style.js",{% endif %}
    "{{ cookiecutter.python_name }}/labextension/package.json",
]
skip-if-exists = ["{{ cookiecutter.python_name }}/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "{{cookiecutter.python_name}}/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"
